--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,20 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!-- Main application theme. -->
+    <style name="Theme.Main" parent="Theme.AppCompat.Light">
+    </style>
+
+    <style name="TextViewTitleLight">
+        <item name="android:textSize">54sp</item>
+        <item name="android:textColor">@color/textWhite</item>
+    </style>
+
+    <style name="EditTextWhite">
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">@color/offwhite</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
     </style>
 
 </resources>
