--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,13 +19,22 @@
         android:text="@string/title_login"/>
 
     <EditText
+        android:id="@+id/user_edittext"
         style="@style/EditTextWhite"
         android:layout_width="match_parent"
+        android:layout_height="35dp"
         android:layout_marginBottom="100dp"
         android:layout_alignParentBottom="true"
-        android:minEms="10"
-        android:maxLength="10"
         android:hint="@string/hint_username" />
+
+    <Button
+        android:id="@+id/user_submit"
+        style="@style/EditTextWhite"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginBottom="40dp"
+        android:text="@string/button_submit"/>
 
 
 </RelativeLayout>
