--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,9 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginRight">30dp</item>
+        <item name="android:height">35dp</item>
+        <item name="android:minEms">10</item>
+        <item name="android:maxLength">10</item>
     </style>
 
 </resources>
