--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,19 +21,18 @@
     <EditText
         android:id="@+id/user_edittext"
         style="@style/EditTextWhite"
+        android:layout_above="@+id/user_submit"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_marginBottom="100dp"
-        android:layout_alignParentBottom="true"
         android:hint="@string/hint_username" />
 
     <Button
-        android:id="@+id/user_submit"
+        android:id="@id/user_submit"
         style="@style/EditTextWhite"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="80dp"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginBottom="40dp"
+        android:layout_height="wrap_content"
         android:text="@string/button_submit"/>
 
 
