--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <!-- Main application theme. -->
-    <style name="Theme.Main" parent="Theme.AppCompat.Light">
+    <style name="Theme.Main" parent="Theme.AppCompat">
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryDark">@color/blue</item>
     </style>
 
     <style name="TextViewTitleLight">
@@ -11,7 +13,7 @@
 
     <style name="EditTextWhite">
         <item name="android:textSize">20sp</item>
-        <item name="android:background">@color/offwhite</item>
+
         <item name="android:gravity">center</item>
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginRight">30dp</item>
