--- a/app/src/main/res/layout/activity_game_session.xml
+++ b/app/src/main/res/layout/activity_game_session.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:id="@+id/guess_edittext"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:paddingLeft="25dp"
         android:background="@color/offwhite"
         android:textColorHint="@color/gray"
         android:textColor="@color/textBlack"
-        android:imeActionId="@+id/action_enter"
+        android:imeActionId="23"
         android:inputType="text"
         android:hint="@string/hint_guess"
         android:imeActionLabel="@string/ime_guess"/>
