--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/blue"
+    android:background="@color/orange"
     tools:context="com.amgems.consort.consort.LoginActivity">
 
     <TextView
@@ -23,7 +23,7 @@
         style="@style/EditTextWhite"
         android:layout_above="@+id/user_submit"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="40dp"
         android:hint="@string/hint_username" />
 
     <Button
